--- a/phr-test/pom.xml
+++ b/phr-test/pom.xml
@@ -1,21 +1,39 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.phr</groupId>
-    <artifactId>phr</artifactId>
-    <version>1.0</version>
-  </parent>
-  <artifactId>phr-test</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.phr</groupId>
-    	<artifactId>phr-core</artifactId>
-		<version>1.0</version>    	
-  	</dependency>
-  	
-  	<dependency>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-data-redis</artifactId>
-</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.phr</groupId>
+		<artifactId>phr</artifactId>
+		<version>1.0</version>
+	</parent>
+	<artifactId>phr-test</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.phr</groupId>
+			<artifactId>phr-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.phr</groupId>
+			<artifactId>phr-code-generator</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- MySql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
+		</dependency>
+		<!-- 连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid.version}</version>
+		</dependency>
+	</dependencies>
 </project>
