--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,25 @@
 		<skipTests>true</skipTests>
 		<rocketmq.version>3.2.6</rocketmq.version>
 	</properties>
+	<dependencies>
+		<!-- spring cloud 依赖配置
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>Finchley.RC2</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>-->
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Finchley.RC2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<!-- 引入mybatis -->
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
